Refactor RacePointsService and StagePointsService to accumulate cyclist points and remove unnecessary logging in UserTeamService